<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/action_settings"
            android:textColor="@color/white"
            android:textSize="40sp"
            />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/action_settings"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@+id/question"
            />

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/true_answer"
            app:layout_constraintTop_toBottomOf="@+id/answer"
            />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/false_answer"
            app:layout_constraintTop_toBottomOf="@+id/answer"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@+id/answer"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>