<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/true_false_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/opaque_white"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/quicksand"
                android:text="@string/structs_questionone"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/top"
                app:layout_constraintVertical_bias="0.1" />

            <Button
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_large"
                android:fontFamily="@font/quicksand"
                android:text="@string/true_answer"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/top"
                app:layout_constraintVertical_bias="0.6" />

            <Button
                android:id="@+id/false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_large"
                android:fontFamily="@font/quicksand"
                android:text="@string/false_answer"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/true_button"
                app:layout_constraintVertical_bias="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="50dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>