<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Textview
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/top"/>

            <Button
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/true_answer"
                app:layout_constraintVertical_bias="0.6"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/top" />

            <Button
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/false_answer"
                app:layout_constraintVertical_bias="0.6"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/top" />

            <Button
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="answer3"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/top" />

            <Button
                android:id="@+id/answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/false_answer"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintBottom_toTopOf="@id/bottom"
                app:layout_constraintLeft_toRightOf="@id/right"
                app:layout_constraintRight_toLeftOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/top" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="50dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>